# gsing_dog

./: .gitignore  CLAUDE.md  send_cmd.py  项目说明.md
src/detection_3d/: package.xml  requirements.txt  setup.cfg  setup.py
src/detection_3d/config/: camera.yaml  detection_params.yaml
src/detection_3d/detection_3d/: arm_kinematics.py  arm_serial_bridge_node.py  detection_3d_calculator_node.py  geometry.py  place_targets.py  protocol.py  target_filter.py  yolo_detector_node.py
src/detection_3d/launch/: bringup.launch.py  camera.launch.py  detection.launch.py
src/detection_3d/rviz/: detection.rviz
src/detection_3d/test/: test_arm_kinematics.py  test_geometry.py  test_place_targets.py  test_protocol.py  test_target_filter.py
src/quadruped_bringup/: package.xml  setup.py
src/quadruped_bringup/config/: params.yaml
src/quadruped_bringup/launch/: robot.launch.py
src/quadruped_control/: CMakeLists.txt  package.xml
src/quadruped_control/src/: serial_bridge_node.cpp  strategy_manager_node.cpp
src/quadruped_interfaces/: CMakeLists.txt  package.xml
src/quadruped_interfaces/msg/: ArmPumpCommand.msg  LegCommand.msg  RobotState.msg
src/quadruped_vision/: package.xml  setup.py
src/quadruped_vision/quadruped_vision/: vision_node.py
