<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detection_3d</name>
  <version>1.0.0</version>
  <description>3D object detection using YOLOv8 and Orbbec Gemini Pro depth camera</description>
  <maintainer email="leon@todo.com">leon</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>quadruped_interfaces</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>
  <!-- ament_index_python is part of ROS2 base, no separate key needed.
       ultralytics is a pip-only package; see requirements.txt -->

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
